# ORLearner_pub

./: .gitignore  CMakeLists.txt  run.bat  solverCfg.txt  view.ps1
Notes/: 0、一些旁支基础.md  1、线性规划.md  2、分支定价.md  3、Benders分解.md  割平面法.md
src/: CMakeLists.txt  main.cpp
src/algorithm/: barp_s_integer_l_shaped.cpp  barp_s_integer_l_shaped.hpp  benders_decomposition.cpp  benders_decomposition.hpp  branch_and_price.cpp  branch_and_price.hpp  column_generation.cpp  column_generation.hpp  direct_solver.cpp  direct_solver.hpp  using_solver.cpp  using_solver.hpp
src/problem/: cutting_stock_problem.cpp
src/problem/BARP/: BARP_S.cpp  BARP_S.hpp  brs_complex_case.txt  brs_small_case.txt
src/problem/BARP/complex_data/: globalCfg.txt  scenarioCfg.txt
src/problem/BARP/complex_data/scenario_0/: scenario.txt
src/problem/BARP/complex_data/scenario_1/: scenario.txt
src/problem/BARP/complex_data/scenario_2/: scenario.txt
src/problem/BARP/complex_data/scenario_3/: scenario.txt
src/problem/BARP/complex_data/scenario_4/: scenario.txt
src/problem/BARP/test_data/: globalCfg.txt  scenarioCfg.txt
src/problem/BARP/test_data/scenario_0/: scenario.txt
src/problem/BARP/test_data/scenario_1/: scenario.txt
src/problem/BARP/test_data/scenario_2/: scenario.txt
src/problem/cutting_stock_problem/: cutting_stock_input.txt  cutting_stock_problem.cpp  cutting_stock_problem.hpp
src/problem/fixed_charge_transportation_problem/: FCTP.cpp  FCTP.hpp
src/problem/fixed_charge_transportation_problem/test_data/: FCTP.txt
src/problem/test_problem/: test.cpp  test.hpp  test_input.txt
src/problem/wireless_charge_bus/: wireless_charging_strategies.cpp  wireless_charging_strategies.hpp
src/problem/wireless_charge_bus/test_data/: config.txt  globalCfg.txt  miscCfg.txt  scenarioCfg.txt  tripArrTimes.txt  tripDepTimes.txt
src/problem/wireless_charge_bus/test_data/scenario_0/: scenarioMiscCfg.txt
src/problem/wireless_charge_bus/test_data/scenario_1/: tripStations.txt
src/problem/wireless_charge_bus/test_data/scenarios/scenario_0/: linkDistance.txt
src/problem/wireless_charge_bus/tower_data/: globalCfg.txt  miscCfg.txt  scenarioCfg.txt  tripDepTimes.txt  tripStations.txt
src/problem/wireless_charge_bus/tower_data/scenario_0/: linkDistance.txt  scenarioMiscCfg.txt  tripArrTimes.txt
src/problem/wireless_charge_bus/tower_data/scenario_1/: linkDistance.txt  scenarioMiscCfg.txt  tripDepTimes.txt  tripStations.txt
src/utils/: basic_solver.hpp  data_reader.cpp  data_reader.hpp  milp_model.hpp  milp_solver.hpp  outputer.hpp  solver_config.cpp  solver_config.hpp  tools.hpp  useless.hpp
